--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,15 @@
   display: block;
 }
 
+.center-screen {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  height: fit-content;
+  z-index: 100;
+  display: block;
+}
+
 .footer {
   position: absolute;
   bottom: 00px;
@@ -36,6 +45,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: var(--color-cream);
 }
 
 #topViewport,
